# Let-s-Code-Bot

./: .env.sh  Pipfile  application.yml  economy.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: music.py
